--- a/docs/sql/sfmc-sql-select.mdx
+++ b/docs/sql/sfmc-sql-select.mdx
@@ -24,17 +24,17 @@ The prefered method is targeting columns explicitly by their names:
 
 ```sql title="Select ContactKey and EmailAddress columns"
 SELECT
-    ContactKey,
-    EmailAddres
+      ContactKey
+    , EmailAddres
 ```
 
 If a column name contains a space, you need to capture it with squared brackets:
 
 ```sql {4} title="Let's add another column with whitespace in its name"
 SELECT
-    ContactKey,
-    EmailAddres,
-    [External Contact Id]
+      ContactKey
+    , EmailAddres
+    , [External Contact Id]
 ```
 
 There are also some exceptional cases related to selected [System Data Views](../config/sfmc-config-system-data-views.mdx) in Salesforce Marketing Cloud, where you need to use an underscore prefix before a name (for example when taking Subscriber ID from Enterprise Attributes):
@@ -49,10 +49,10 @@ You can also utilize `SELECT` as a tool to rename the source columns to match yo
 
 ```sql {4-5} title="Improve readability and consistency with aliasing"
 SELECT
-    ContactKey,
-    EmailAddress,
-    [External Contact Id] AS ExternalContactId,
-    Gender__c             AS Gender
+      ContactKey
+    , EmailAddress
+    , [External Contact Id] AS ExternalContactId
+    , Gender__c             AS Gender
 ```
 
 ### Custom values
@@ -61,12 +61,12 @@ Use aliases also for passing new values directly from your query. Need to add a 
 
 ```sql {6-7} title="Add custom column aliased 'ImportDate' with a value equal to the UTC of the script execution for each record"
 SELECT
-    ContactKey,
-    EmailAddress,
-    [External Contact Id] AS ExternalContactId,
-    Gender__c             AS Gender,
-    'Lead'                AS RecordType,
-    GETUTCDATE()          AS ImportDate
+      ContactKey
+    , EmailAddress
+    , [External Contact Id] AS ExternalContactId
+    , Gender__c             AS Gender
+    , 'Lead'                AS RecordType
+    , GETUTCDATE()          AS ImportDate
 ```
 
 :::note You Should Know
@@ -75,9 +75,9 @@ You can even go further by creating new values by leveraging existing data! For 
 
 ```sql {4} title="Let's create a concatenated column for easier personalization"
 SELECT
-    SubscriberKey,
-    EmailAddress,
-    FirstName + ' ' + LastName AS FullName
+      SubscriberKey
+    , EmailAddress
+    , FirstName + ' ' + LastName AS FullName
 ```
 
 It becomes mighty with the [SQL String functions](./sfmc-sql-string-functions.mdx).
@@ -90,19 +90,19 @@ It becomes mighty with the [SQL String functions](./sfmc-sql-string-functions.md
 
 ```sql {8-14}
 SELECT
-    ContactKey,
-    EmailAddress,
-    [External Contact Id] AS ExternalContactId,
-    Gender__c             AS Gender,
-    'Lead'                AS RecordType,
-    GETUTCDATE()          AS ImportDate,
-    CASE MemberType__c
+      ContactKey
+    , EmailAddress
+    , [External Contact Id] AS ExternalContactId
+    , Gender__c             AS Gender
+    , 'Lead'                AS RecordType
+    , GETUTCDATE()          AS ImportDate
+    , CASE MemberType__c
         WHEN 1 THEN 'Bronze'
         WHEN 2 THEN 'Silver'
         WHEN 3 THEN 'Gold'
         WHEN 4 THEN 'Platinum'
         ELSE 'Unregistered'
-    END
+      END
 ```
 
 You can have as many `WHEN`/`THEN` conditions as you want. Also, the `ELSE` statement is optional, but a good idea to catch unexpected values.
@@ -111,19 +111,19 @@ Feel free also to leverage [aliases](#aliasing-with-as) to manipulate the column
 
 ```sql {14}
 SELECT
-    ContactKey,
-    EmailAddress,
-    [External Contact Id] AS ExternalContactId,
-    Gender__c             AS Gender,
-    'Lead'                AS RecordType,
-    GETUTCDATE()          AS ImportDate,
-    CASE MemberType__c
+      ContactKey
+    , EmailAddress
+    , [External Contact Id] AS ExternalContactId
+    , Gender__c             AS Gender
+    , 'Lead'                AS RecordType
+    , GETUTCDATE()          AS ImportDate
+    , CASE MemberType__c
         WHEN 1 THEN 'Bronze'
         WHEN 2 THEN 'Silver'
         WHEN 3 THEN 'Gold'
         WHEN 4 THEN 'Platinum'
         ELSE 'Unregistered'
-    END                   AS MemberType
+      END                   AS MemberType
 ```
 
 ### Search version of CASE
@@ -134,31 +134,31 @@ The difference is that you are not passing the column name on which you will be 
 
 ```sql {8-14} title="The same query as the previous one, but written with Search Case"
 SELECT
-    ContactKey,
-    EmailAddress,
-    [External Contact Id] AS ExternalContactId,
-    Gender__c             AS Gender,
-    'Lead'                AS RecordType,
-    GETUTCDATE()          AS ImportDate,
-    CASE
+      ContactKey
+    , EmailAddress
+    , [External Contact Id] AS ExternalContactId
+    , Gender__c             AS Gender
+    , 'Lead'                AS RecordType
+    , GETUTCDATE()          AS ImportDate
+    , CASE
         WHEN MemberType__c = 1 THEN 'Bronze'
         WHEN MemberType__c = 2 THEN 'Silver'
         WHEN MemberType__c = 3 THEN 'Gold'
         WHEN MemberType__c = 4 THEN 'Platinum'
         ELSE 'Unregistered'
-    END                   AS MemberType
+      END                   AS MemberType
 ```
 
 The example above doesn't show why it is worth to use the search `CASE`. It is a bit longer than the standard approach! But there is a reason to use this form of `CASE` statement that is visible once you want to create more elaborate conditions that are possible only with this version:
 
 ```sql {3-7} title="Let's calculate what channel we should use in our campaign for a given user"
 SELECT
-    ContactKey,
-    CASE
+      ContactKey
+    , CASE
         WHEN IsAppInstalled = 1 THEN 'Push'
         WHEN EmailOptIn = 1 AND EmailAddress IS NOT NULL THEN 'Email'
         WHEN PhoneOptIn = 1 AND Mobile IS NOT NULL THEN 'Phone'
-    END AS PreferredChannel
+      END AS PreferredChannel
 ```
 
 :::note You Should Know
@@ -177,8 +177,8 @@ You can use `CASE` statements inside a `CASE` statement to have an even more dyn
 
 ```sql {3-16} title="Let's add another dimension of membership level to differentiate available channels"
 SELECT
-    ContactKey,
-    CASE
+      ContactKey
+    , CASE
         WHEN MemberType = 'Platinum' THEN 'Key Account Manager'
         WHEN MemberType = 'Gold' OR MemberType = 'Silver' THEN
             CASE
@@ -191,7 +191,7 @@ SELECT
                 WHEN IsAppInstalled = 1 THEN 'Push'
                 WHEN EmailOptIn = 1 AND EmailAddress IS NOT NULL THEN 'Email'
             END
-    END AS PreferredChannel
+      END AS PreferredChannel
 ```
 
 :::
@@ -202,11 +202,11 @@ SELECT
 
 ```sql {4} title="Great way to split your database between Internal and External users for different communication"
 SELECT
-    ContactKey,
-    CASE
+      ContactKey
+    , CASE
         WHEN EmailAddress LIKE '%@mateuszdabrowski.%' THEN 'Internal'
         ELSE 'External'
-    END AS ContactType
+      END AS ContactType
 ```
 
 In the `SELECT` statement, the `LIKE` operator is especially useful for fixing data coming from the free text fields. To learn more about the possibilities, check out the [`LIKE` guide](./sfmc-sql-like.mdx).
@@ -217,8 +217,8 @@ Additional elements that you will be using in many of your queries are table pre
 
 ```sql
 SELECT
-    _Subscriber.SubscriberKey
-    _EnterpriseAttribute.LastName
+      _Subscriber.SubscriberKey
+    , _EnterpriseAttribute.LastName
 ```
 
 I'm covering this topic in-depth in [`JOIN` statement documentation](./sfmc-sql-join.mdx#table-name-prefix).
