--- a/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
+++ b/docs/sql/sfmc-sql-snippet-debugging-value-length.mdx
@@ -44,12 +44,12 @@ You can make quick manual check with a simple SQL query. Open your [Query Studio
 
 ```sql title="Sample maximum length checking query on Contact object Synchronized Data Extension"
 SELECT
-    MAX(LEN(c.Id))          AS SubscriberKey,
-    MAX(LEN(c.FirstName))   AS FirstName,
-    MAX(LEN(c.LastName))    AS LastName,
-    MAX(LEN(c.Email))       AS EmailAddress,
-    MAX(LEN(c.JobTitle__c)) AS CurrentRole,
-    MAX(LEN(c.Industry__c)) AS Industry
+      MAX(LEN(c.Id))          AS SubscriberKey
+    , MAX(LEN(c.FirstName))   AS FirstName
+    , MAX(LEN(c.LastName))    AS LastName
+    , MAX(LEN(c.Email))       AS EmailAddress
+    , MAX(LEN(c.JobTitle__c)) AS CurrentRole
+    , MAX(LEN(c.Industry__c)) AS Industry
 FROM Contact_Salesforce c
 ```
 
@@ -101,13 +101,13 @@ Go to the Automation that takes care of moving the data from Synchronized Data E
 
 ```sql title="Basic field length checking query"
 SELECT
-    c.Id               AS ContactID,
-    LEN(c.Id)          AS SubscriberKey,
-    LEN(c.FirstName)   AS FirstName,
-    LEN(c.LastName)    AS LastName,
-    LEN(c.Email)       AS EmailAddress,
-    LEN(c.JobTitle__c) AS JobTitle,
-    LEN(c.Industry__c) AS Industry
+      c.Id               AS ContactID
+    , LEN(c.Id)          AS SubscriberKey
+    , LEN(c.FirstName)   AS FirstName
+    , LEN(c.LastName)    AS LastName
+    , LEN(c.Email)       AS EmailAddress
+    , LEN(c.JobTitle__c) AS JobTitle
+    , LEN(c.Industry__c) AS Industry
 FROM Contact_Salesforce c
 WHERE
     18 - LEN(c.Id) < 0
@@ -189,31 +189,31 @@ After applying both of the above options to the [Basic SQL Snippet](#basic-long-
 
 ```sql
 SELECT
-    c.Id AS ContactID,
-    CASE
+      c.Id AS ContactID
+    , CASE
         WHEN 18 - LEN(c.Id) < 0
         THEN CONCAT(LEN(c.Id), '(', LEN(c.Id) - 18, ' over limit)')
-    END AS SubscriberKey,
-    CASE
+      END AS SubscriberKey
+    , CASE
         WHEN 40 - LEN(c.FirstName) < 0
         THEN CONCAT(LEN(c.FirstName), '(', LEN(c.FirstName) - 40, ' over limit)')
-    END AS FirstName,
-    CASE
+      END AS FirstName
+    , CASE
         WHEN 80 - LEN(c.LastName) < 0
         THEN CONCAT(LEN(c.LastName), '(', LEN(c.LastName) - 80, ' over limit)')
-    END AS LastName,
-    CASE
+      END AS LastName
+    , CASE
         WHEN 254 - LEN(c.Email) < 0
         THEN CONCAT(LEN(c.Email), '(', LEN(c.Email) - 254, ' over limit)')
-    END AS EmailAddress,
-    CASE
+      END AS EmailAddress
+    , CASE
         WHEN 80 - LEN(c.JobTitle__c) < 0
         THEN CONCAT(LEN(c.JobTitle__c), '(', LEN(c.JobTitle__c) - 80, ' over limit)')
-    END AS JobTitle,
-    CASE
+      END AS JobTitle
+    , CASE
         WHEN 40 - LEN(c.Industry__c) < 0
         THEN CONCAT(LEN(c.Industry__c), '(', LEN(c.Industry__c) - 40, ' over limit)')
-    END AS Industry
+      END AS Industry
 FROM Contact_Salesforce c
 WHERE
     18 - LEN(c.Id) < 0
