--- a/docs/sql/sfmc-sql-string-functions.mdx
+++ b/docs/sql/sfmc-sql-string-functions.mdx
@@ -34,9 +34,9 @@ Both require two parameters - source value and the number of characters to retur
 
 ```sql title="LEFT and RIGHT can work both on strings as well as on other data types"
 SELECT
-    LEFT(FirstName, 1)    AS FirstNameInitialLetter,
-    RIGHT(FirstName, 1)   AS FirstNameEndingLetter,
-    LEFT(s.DateJoined, 3) AS MonthJoined
+      LEFT(FirstName, 1)    AS FirstNameInitialLetter
+    , RIGHT(FirstName, 1)   AS FirstNameEndingLetter
+    , LEFT(s.DateJoined, 3) AS MonthJoined
 ```
 
 Both those functions can be beneficial to clean and streamline your data by themselves, but their real power becomes evident when you mix them with [`CHARINDEX`](#charindex) for content-aware cuts.
@@ -81,10 +81,10 @@ CHARINDEX("Manager", JobTitle COLLATE Latin1_General_CS_AS)
 
 ```sql {3} title="Dynamically pull part of the Institution Name value"
 SELECT
-    CASE
+      CASE
         WHEN CHARINDEX(' ', InstitutionName) > 0 THEN LEFT(InstitutionName, CHARINDEX(' ', InstitutionName) - 1)
         ELSE InstitutionName
-    END AS InstitutionType
+      END AS InstitutionType
 FROM Accounts
 ```
 
@@ -100,9 +100,9 @@ You can use it on both existing values pulled from source data extension, as wel
 
 ```sql {4} title="Perfect for preparing your data for personalization"
 SELECT
-    SubscriberKey,
-    EmailAddress,
-    CONCAT(FirstName, ' ', LastName) AS FullName
+      SubscriberKey
+    , EmailAddress
+    , CONCAT(FirstName, ' ', LastName) AS FullName
 ```
 
 You can concatenate any number of strings by just adding them comma-separated.
@@ -113,9 +113,9 @@ In many cases, you might see concatenation done with the plus sign notation.
 
 ```sql {4} title="Same as above, but with the plus notation"
 SELECT
-    SubscriberKey,
-    EmailAddress,
-    FirstName + ' ' + LastName AS FullName
+      SubscriberKey
+    , EmailAddress
+    , FirstName + ' ' + LastName AS FullName
 ```
 
 It might seem cleaner, but there are two downsides to this method:
@@ -136,9 +136,9 @@ There are also two child functions - `RTRIM` and `LTRIM` that works the same but
 
 ```sql title="Noone likes useless whitespace in their database"
 SELECT
-    LTRIM('   data from webform ')        AS CleanLeftSide      /* Output: 'data from webform ' */
-    RTRIM('   data from webform ')        AS CleanRightSide     /* Output: '   data from webform' */
-    LTRIM(RTRIM('   data from webform ')) AS SameAsTRIM  /* Output: 'data from webform' */
+      LTRIM('   data from webform ')        AS CleanLeftSide      /* Output: 'data from webform ' */
+    , RTRIM('   data from webform ')        AS CleanRightSide     /* Output: '   data from webform' */
+    , LTRIM(RTRIM('   data from webform ')) AS SameAsTRIM  /* Output: 'data from webform' */
 ```
 
 :::note You Should Know
